--- a/css/_cart.sass
+++ b/css/_cart.sass
@@ -17,6 +17,7 @@
             +font(14px, 17px)
             font-weight: 300
             color: #000000
+            transition: .2s
 
             &:hover
                 background-color: $buttonColor
@@ -104,6 +105,7 @@
                 font-weight: 300
                 color: #4A4A4A
                 +flexCenter()
+                transition: .2s
 
                 &:hover
                     background-color: $buttonColor
@@ -154,6 +156,7 @@
                 +flexCenter()
                 align-self: center
                 margin-top: 17px
+                transition: .2s
 
                 &:hover
                     background-color: $buttonColor - #111
