--- a/css/_cart.sass
+++ b/css/_cart.sass
@@ -66,8 +66,9 @@
                 width: 43px
                 height: 24px
                 border: 1px solid #EAEAEA
-                +flexCenter
                 margin-left: 24px
+                padding-left: 15px
+                box-sizing: border-box
                 +font(18px, 22px)
                 color: #656565
 
@@ -95,7 +96,6 @@
                 margin: 20px 0
                 +font(16px, 19px)
                 font-weight: 300
-                color: #222222
 
             &__button
                 width: 100px
@@ -160,3 +160,6 @@
 
                 &:hover
                     background-color: $buttonColor - #111
+
+.product-card_color
+    color: #222222
