--- a/css/_registration.sass
+++ b/css/_registration.sass
@@ -56,15 +56,23 @@
         
 .registration-info
     max-width: 652px
-    +font(24px, 29px)
-    font-weight: 300
-    color: #000000
+
+    &__header
+        +font(24px, 29px)
+        font-weight: 300
+        color: #000000
 
     &__description
         margin: 22px 0
+        +font(24px, 29px)
+        font-weight: 300
+        color: #000000
         
     &__perk
         margin-bottom: 16px
+        +font(24px, 29px)
+        font-weight: 300
+        color: #000000
 
         &::before
             content: url("../img/check-img.svg")
