cart.html remake to BEM

--- a/css/style.css
+++ b/css/style.css
@@ -98,14 +98,13 @@ input[type=checkbox] {
 .top-header__right > nav {
   position: absolute;
   display: none;
-  height: 764px;
   width: 232px;
   background: #FFFFFF;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 16px 16px 0 32px;
+  padding: 16px 16px 32px 32px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
@@ -1129,7 +1128,84 @@ details summary::-webkit-details-marker {
           justify-content: space-between;
 }
 
-.cart__product__buttons {
+.cart-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 652px;
+  height: 306px;
+  -webkit-box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
+          box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
+}
+
+.cart-card:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.cart-card__header {
+  font-family: Lato;
+  font-size: 24px;
+  line-height: 29px;
+  color: #222222;
+  font-weight: 400;
+  width: 80%;
+  margin-bottom: 42px;
+}
+
+.cart-card__header_color {
+  color: #222222;
+}
+
+.cart-card__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 6px;
+  font-family: Lato;
+  font-size: 22px;
+  line-height: 26px;
+  color: #575757;
+  font-weight: 400;
+}
+
+.cart-card__img {
+  height: 100%;
+}
+
+.cart-card__description {
+  width: 262px;
+  padding: 22px;
+  margin-left: 9px;
+}
+
+.cart-card__description_mg {
+  margin-left: .4em;
+}
+
+.cart-card__description_red {
+  color: #F16D7F;
+}
+
+.cart-card__box {
+  width: 43px;
+  height: 24px;
+  border: 1px solid #EAEAEA;
+  margin-left: 24px;
+  padding-left: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Lato;
+  font-size: 18px;
+  line-height: 22px;
+  color: #656565;
+}
+
+.cart-card__close-img {
+  margin-left: 35px;
+  margin-top: 28px;
+}
+
+.cart-buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1139,7 +1215,7 @@ details summary::-webkit-details-marker {
   margin-top: 72px;
 }
 
-.cart__product__buttons__item {
+.cart-buttons__btn {
   width: 235px;
   height: 50px;
   border: 1px solid #A4A4A4;
@@ -1161,90 +1237,17 @@ details summary::-webkit-details-marker {
   transition: .2s;
 }
 
-.cart__product__buttons__item:hover {
+.cart-buttons__btn:hover {
   background-color: #F16D7F;
   border: 1px solid #F16D7F;
   color: white;
 }
 
-.cart__product__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 652px;
-  height: 306px;
-  -webkit-box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
-          box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
-}
-
-.cart__product__item__header {
-  font-family: Lato;
-  font-size: 24px;
-  line-height: 29px;
-  color: #222222;
-  font-weight: 400;
-  width: 80%;
-  margin-bottom: 42px;
-}
-
-.cart__product__item__text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 6px;
-  font-family: Lato;
-  font-size: 22px;
-  line-height: 26px;
-  color: #575757;
-  font-weight: 400;
-}
-
-.cart__product__item:not(:last-child) {
-  margin-bottom: 40px;
-}
-
-.cart__product__item__img {
-  height: 100%;
-}
-
-.cart__product__item__description {
-  width: 262px;
-  padding: 22px;
-  margin-left: 9px;
-}
-
-.cart__product__item__description_mg {
-  margin-left: .4em;
-}
-
-.cart__product__item__description_red {
-  color: #F16D7F;
-}
-
-.cart__product__item__description__box {
-  width: 43px;
-  height: 24px;
-  border: 1px solid #EAEAEA;
-  margin-left: 24px;
-  padding-left: 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: Lato;
-  font-size: 18px;
-  line-height: 22px;
-  color: #656565;
-}
-
-.cart__product__item__close_img {
-  margin-left: 35px;
-  margin-top: 28px;
-}
-
-.cart__address {
+.address {
   width: 360px;
 }
 
-.cart__address__form {
+.address__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1254,7 +1257,15 @@ details summary::-webkit-details-marker {
           flex-direction: column;
 }
 
-.cart__address__form__input {
+.address__header {
+  margin: 20px 0;
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 300;
+}
+
+.address__input {
   height: 46px;
   margin-bottom: 21px;
   border: 1px solid #A4A4A4;
@@ -1266,15 +1277,7 @@ details summary::-webkit-details-marker {
   padding: 0 16px;
 }
 
-.cart__address__form__header {
-  margin: 20px 0;
-  font-family: Lato;
-  font-size: 16px;
-  line-height: 19px;
-  font-weight: 300;
-}
-
-.cart__address__form__button {
+.address__button {
   width: 100px;
   height: 34px;
   border: 1px solid #A4A4A4;
@@ -1296,13 +1299,13 @@ details summary::-webkit-details-marker {
   transition: .2s;
 }
 
-.cart__address__form__button:hover {
+.address__button:hover {
   background-color: #F16D7F;
   border: 1px solid #F16D7F;
   color: white;
 }
 
-.cart__address__total {
+.quote {
   height: 214px;
   padding: 40px;
   background-color: #F5F3F3;
@@ -1318,7 +1321,7 @@ details summary::-webkit-details-marker {
           flex-direction: column;
 }
 
-.cart__address__total__sub_price {
+.quote__sub-price {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1331,7 +1334,7 @@ details summary::-webkit-details-marker {
   margin-bottom: 12px;
 }
 
-.cart__address__total__price {
+.quote__price {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1345,20 +1348,20 @@ details summary::-webkit-details-marker {
   margin-bottom: 21px;
 }
 
-.cart__address__total__price_mg {
+.quote__price_mg {
   margin-left: 1.5em;
 }
 
-.cart__address__total__price_red {
+.quote__price_red {
   color: #F16D7F;
 }
 
-.cart__address__total__devider {
+.quote__devider {
   height: 1px;
   background-color: #E2E2E2;
 }
 
-.cart__address__total__button {
+.quote__button {
   width: 273px;
   height: 50px;
   background-color: #F16D7F;
@@ -1383,12 +1386,8 @@ details summary::-webkit-details-marker {
   transition: .2s;
 }
 
-.cart__address__total__button:hover {
+.quote__button:hover {
   background-color: #e05c6e;
-}
-
-.product-card_color {
-  color: #222222;
 }
 
 .registration-container {
@@ -1425,6 +1424,8 @@ details summary::-webkit-details-marker {
 
 .registration-form__radio {
   margin: 32px 10px 32px 0;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 
 .registration-form__radio_mg {
