--- a/css/style.sass
+++ b/css/style.sass
@@ -69,11 +69,11 @@ input[type=checkbox]
     &__right > nav
         position: absolute
         display: none
-        height: 764px
+        //height: 764px
         width: 232px
         background: #FFFFFF
         flex-direction: column
-        padding: 16px 16px 0 32px
+        padding: 16px 16px 32px 32px
         box-sizing: border-box
         box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
         z-index: 1
