--- a/css/style.sass
+++ b/css/style.sass
@@ -429,149 +429,7 @@ input[type=checkbox]
     &:not(:last-child)::after
         content: " /"
 
-.main-catalog__filter
-    +centerPadding()
-    margin: 51px 0 64px
-    display: flex
-
-.main-catalog__product
-    display: grid
-    grid-template: repeat(1, 1fr) / repeat(3, 1fr)
-    grid-gap: 30px
-    margin-bottom: 128px
-
-.filter__menu
-    position: relative
-
-    &__text
-        +font(14px, 17px)
-        font-weight: 600
-        color: #000000
-        padding-left: 12px
-
-    &__text_red
-        +font(14px, 17px)
-        font-weight: 600
-        color: $buttonColor
-
-    &__navbar
-        position: absolute
-        left: -100vw
-        z-index: 1
-        background-color: white
-        padding: 17px
-        box-sizing: border-box
-        width: 360px
-        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
-
-    &__details
-        +font(14px, 17px)
-        color: $buttonColor
-        margin-top: 18px
-
-    &__details > summary
-        border-left: 5px solid $buttonColor
-        height: 37px
-        border-bottom: 1px solid #EBEBEB
-        display: flex
-        align-items: center
-        padding-left: 11px
-        outline: none
-
-    &__ref
-        +font(14px, 17px)
-        color: #6F6E6E
-        margin: 11px 12px
-        transition: .2s
-
-        &:hover
-            color: $buttonColor
-
-    &__input:checked ~ nav
-        left: -5px
-        top: -16px
-
-    &__category
-        display: flex
-        flex-direction: column
-        background-color: white
-        border-left: 5px solid white
-
-.filter__img_mg
-    margin-left: 11px
-
-details summary::-webkit-details-marker
-    display: none
-
-.main-catalog__filter__center
-    margin-left: 26%
-    display: flex
-
-.filter__center__menu
-    position: relative
-    +font(14px, 17px)
-    color: #6F6E6E
-    margin-left: 28px
-
-.filter__center__navbar
-    position: absolute
-    left: -100vw
-    z-index: 1
-    background-color: white
-    width: 79px
-    height: 103px
-    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
-    display: flex
-    flex-direction: column
-    justify-content: space-around
-    +font(14px, 16px)
-    color: #6F6E6E
-    padding: 9px
-    box-sizing: border-box    
-
-.filter__center__input:checked ~ nav
-    left: 0
-
-.add_checkbox
-    width: 12px
-    height: 12px
-    border: 1px solid #EBEBEB
-    margin-right: 9px
-
-.filter__center__add_checkbox
-    display: flex
-
-.checkbox_visible:checked ~ div
-    background-color: #ccc
-
-.filter_img2_mg
-    margin-left: 10px
-
-.pagination
-    display: flex
-    justify-content: center
-    margin-top: 48px
-
-    &__container
-        width: 284px
-        height: 44px
-        +flexCenter()
-        border: 1px solid #EBEBEB
-        border-radius: 4px
-
-    &__item
-        +font(16px, 19px)
-        font-weight: 300
-        color: #C4C4C4
-        margin-left: 20px
-        transition: .2s
-
-        &_notmg
-            margin-left: 0
-            margin-right: 20px
-
-        &:hover
-            color: $buttonColor
+@import catalog
 
 @import product
 
