--- a/css/style.sass
+++ b/css/style.sass
@@ -33,33 +33,33 @@ input[type=checkbox]
 
     &__logo
         transition: .2s
-        
+
         &:hover
             transform: scale(1.1)
 
     &__search
         padding-left: 41px
         transition: .2s
-        
+
         &:hover
             transform: scale(1.1)
 
     &__main-menu
         transition: .2s
-        
+
         &:hover
             transform: scale(1.1)
 
     &__account
         padding: 0 33px
         transition: .2s
-        
+
         &:hover
             transform: scale(1.1)
 
     &__cart
         transition: .2s
-        
+
         &:hover
             transform: scale(1.1)
 
@@ -132,10 +132,10 @@ input[type=checkbox]
     &__header
         +font(48px, 58px)
         font-weight: 900
-        color: #222224    
+        color: #222224
 
     &__text
-        +font(32px, 38px)    
+        +font(32px, 38px)
         font-weight: 700
         color: #222224
 
@@ -152,7 +152,7 @@ input[type=checkbox]
     &__item_margin
         margin: 0 30px
 
-    &_img
+    &__img
         width: 100%
 
     &__item
@@ -188,11 +188,11 @@ input[type=checkbox]
     &__header
         text-align: center
 
-        &__header
-            +font(30px, 97px)
-            font-weight: 400    
-            color: #222224
-            margin-top: 97px
+    &__heading
+        +font(30px, 97px)
+        font-weight: 400
+        color: #222224
+        margin-top: 97px
 
     &__text
         +font(14px, 17px)
@@ -204,34 +204,6 @@ input[type=checkbox]
         display: grid
         grid-template: repeat(2, 1fr) / repeat(3, 1fr)
         grid-gap: 30px
-
-    &__card
-        background-color: #F8F8F8
-        position: relative        
-
-        &:hover .product__img
-            filter: brightness(50%)
-
-        &:hover .product__button_hover
-            display: flex
-
-        &__header
-            +font(13px, 16px)
-            font-weight: 400
-            color: #000000
-            padding: 25px 18px 12px
-
-        &__text
-            +font(14px, 17px)
-            font-weight: 300
-            color: #5D5D5D
-            padding: 0 16px
-
-        &__price
-            +font(16px, 19px)
-            font-weight: 400
-            color: $buttonColor
-            padding: 18px 18px 20px
 
     &__button
         width: 211px
@@ -248,26 +220,54 @@ input[type=checkbox]
             background-color: $buttonColor
             color: white
 
-        &_hover
-            position: absolute
-            top: 33%
-            left: 31%
-            border: 1px solid #FFFFFF
-            width: 138px
-            height: 43px
-            justify-content: space-around
-            align-items: center
-            display: none
-            +font(14px, 17px)
-            font-weight: 400
-            color: #FFFFFF
-            transition: .2s
+.product-card
+    background-color: #F8F8F8
+    position: relative
+
+    &:hover .product-card__img
+        filter: brightness(50%)
+
+    &:hover .product-card__button-hover
+        display: flex
+
+    &__header
+        +font(13px, 16px)
+        font-weight: 400
+        color: #000000
+        padding: 25px 18px 12px
+
+    &__text
+        +font(14px, 17px)
+        font-weight: 300
+        color: #5D5D5D
+        padding: 0 16px
+
+    &__price
+        +font(16px, 19px)
+        font-weight: 400
+        color: $buttonColor
+        padding: 18px 18px 20px
+
+    &__button-hover
+        position: absolute
+        top: 33%
+        left: 31%
+        border: 1px solid #FFFFFF
+        width: 138px
+        height: 43px
+        justify-content: space-around
+        align-items: center
+        display: none
+        +font(14px, 17px)
+        font-weight: 400
+        color: #FFFFFF
+        transition: .2s
 
     &__img
         width: 100%
         transition: .2s
 
-.footer__top
+.footer-top
     height: 341px
     background-color: #222224
     margin-top: 95px
@@ -296,7 +296,7 @@ input[type=checkbox]
         text-align: center
         color: #FBFBFB
 
-.footer__subscribe
+.footer-subscribe
     background-image: url(../img/footer_bcg.png)
     background-size: cover
     background-position: center, bottom
@@ -315,21 +315,21 @@ input[type=checkbox]
         font-weight: 400
         color: #222224
 
-    &__form
-        text-align: center
+.subscribe-form
+    text-align: center
 
-    &__form__header
+    &__header
         +font(24px, 40px)
         font-weight: bold
         color: #222224
 
-    &__form__text
+    &__text
         margin: 10px 0 32px
         +font(18px, 30px)
         font-weight: 400
         color: #222224
 
-    &__form__form
+    &__form
         height: 49px
         display: flex
 
@@ -354,7 +354,7 @@ input[type=checkbox]
         &:hover
             background-color: $buttonColor - #111
 
-.footer__bottom
+.footer-bottom
     height: 79px
     background-color: #222224
 
@@ -364,34 +364,34 @@ input[type=checkbox]
         justify-content: space-between
         align-items: center
 
-.footer__copyright
-    +font(16px, 19px)
-    font-weight: 400
-    color: #FBFBFB
+    &__copyright
+        +font(16px, 19px)
+        font-weight: 400
+        color: #FBFBFB
 
-.footer__social
-    display: flex
+    &__social
+        display: flex
 
-.footer__icon
-    width: 32px
-    height: 32px
-    background-color: white
-    margin-left: 7px
-    +flexCenter()
-    transition: .2s
-
-    &:hover
-        background-color: $buttonColor
-
-    &:hover .footer__icon_hover
-        filter: invert(1)
+    &__icon
+        width: 32px
+        height: 32px
+        background-color: white
+        margin-left: 7px
+        +flexCenter()
         transition: .2s
 
-    &__instagram:hover .instagram_invert
+        &:hover
+            background-color: $buttonColor
+
+        &:hover .footer-bottom__icon_hover
+            filter: invert(1)
+            transition: .2s
+
+    &__instagram:hover .footer-bottom__instagram_invert
         filter: none
 
-.instagram_invert
-    filter: invert(1)
+    &__instagram_invert
+        filter: invert(1)
 
 .main-catalog__header__container
     height: 148px
