--- a/css/_product.sass
+++ b/css/_product.sass
@@ -87,27 +87,9 @@
         font-weight: 400
         color: #6F6E6E
 
-        &:hover .chooser__navbar
+        &:hover .chooser-checkbox__navbar
             display: flex
-            left: 14px
-
-    &__navbar
-        display: none
-        position: absolute
-        z-index: 1
-        background-color: white
-        width: 79px
-        height: 103px
-        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
-        flex-direction: column
-        justify-content: space-around
-        +font(14px, 16px)
-        color: #6F6E6E
-        padding: 9px
-        box-sizing: border-box
-
-    &__img
-        margin: 0 0 2px 9px
+            left: 14px    
     
 .add-to-cart-btn
     width: 211px
