--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,11 @@ details summary::-webkit-details-marker {
   font-weight: 600;
   color: #000000;
   padding-left: 12px;
+  position: absolute;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .filter-menu__text_red {
@@ -719,7 +724,7 @@ details summary::-webkit-details-marker {
 
 .filter-menu__navbar {
   position: absolute;
-  left: -100vw;
+  left: -120vw;
   z-index: 1;
   background-color: white;
   padding: 17px;
@@ -736,6 +741,10 @@ details summary::-webkit-details-marker {
   line-height: 17px;
   color: #F16D7F;
   margin-top: 18px;
+}
+
+.filter-menu__details:first-child {
+  margin-top: 32px;
 }
 
 .filter-menu__details > summary {
@@ -771,6 +780,18 @@ details summary::-webkit-details-marker {
   top: -16px;
 }
 
+.filter-menu__input:checked ~ .filter-menu__text {
+  color: #F16D7F;
+}
+
+.filter-menu__input:checked ~ .filter-menu__text > .filter-menu__img {
+  display: none;
+}
+
+.filter-menu__input:not(:checked) ~ .filter-menu__text > .filter-menu__img_red {
+  display: none;
+}
+
 .filter-menu__category {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -783,8 +804,15 @@ details summary::-webkit-details-marker {
   border-left: 5px solid white;
 }
 
-.filter-menu__img_mg {
+.filter-menu__img {
   margin-left: 11px;
+  position: relative;
+}
+
+.filter-menu__img_red {
+  position: absolute;
+  left: 67px;
+  top: 3px;
 }
 
 .chooser-checkbox {
@@ -797,7 +825,7 @@ details summary::-webkit-details-marker {
 }
 
 .chooser-checkbox_position {
-  margin-left: 26%;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -834,21 +862,27 @@ details summary::-webkit-details-marker {
   left: 0;
 }
 
-.chooser-checkbox__checkbox {
-  width: 12px;
-  height: 12px;
-  border: 1px solid #EBEBEB;
-  margin-right: 9px;
-}
-
 .chooser-checkbox__checkbox_position {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.chooser-checkbox__checkbox_visible:checked ~ div {
+.chooser-checkbox__checkbox_visible:checked {
   background-color: #ccc;
+}
+
+.chooser-checkbox__checkbox_visible {
+  display: inline-block !important;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  margin-right: 9px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #EBEBEB;
 }
 
 .chooser-checkbox__img {
@@ -1044,39 +1078,11 @@ details summary::-webkit-details-marker {
   color: #6F6E6E;
 }
 
-.chooser__item:hover .chooser__navbar {
+.chooser__item:hover .chooser-checkbox__navbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   left: 14px;
-}
-
-.chooser__navbar {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  background-color: white;
-  width: 79px;
-  height: 103px;
-  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
-          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-family: Lato;
-  font-size: 14px;
-  line-height: 16px;
-  color: #6F6E6E;
-  padding: 9px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.chooser__img {
-  margin: 0 0 2px 9px;
 }
 
 .add-to-cart-btn {
