--- a/css/_catalog.sass
+++ b/css/_catalog.sass
@@ -20,6 +20,9 @@ details summary::-webkit-details-marker
         font-weight: 600
         color: #000000
         padding-left: 12px
+        position: absolute
+        z-index: 2
+        display: flex
 
         &_red
             +font(14px, 17px)
@@ -28,7 +31,7 @@ details summary::-webkit-details-marker
 
     &__navbar
         position: absolute
-        left: -100vw
+        left: -120vw
         z-index: 1
         background-color: white
         padding: 17px
@@ -40,6 +43,9 @@ details summary::-webkit-details-marker
         +font(14px, 17px)
         color: $buttonColor
         margin-top: 18px
+
+        &:first-child
+            margin-top: 32px
 
     &__details > summary
         border-left: 5px solid $buttonColor
@@ -62,6 +68,15 @@ details summary::-webkit-details-marker
     &__input:checked ~ nav
         left: -5px
         top: -16px
+    
+    &__input:checked ~ .filter-menu__text
+        color: $buttonColor
+    
+    &__input:checked ~ .filter-menu__text > .filter-menu__img
+        display: none
+    
+    &__input:not(:checked) ~ .filter-menu__text > .filter-menu__img_red
+        display: none
 
     &__category
         display: flex
@@ -69,8 +84,14 @@ details summary::-webkit-details-marker
         background-color: white
         border-left: 5px solid white
 
-    &__img_mg
+    &__img
         margin-left: 11px
+        position: relative
+
+        &_red
+            position: absolute
+            left: 67px
+            top: 3px
 
 .chooser-checkbox
     position: relative
@@ -79,7 +100,7 @@ details summary::-webkit-details-marker
     margin-left: 28px
 
     &_position
-        margin-left: 26%
+        margin: 0 auto
         display: flex
 
     &__navbar
@@ -101,20 +122,25 @@ details summary::-webkit-details-marker
     &__input:checked ~ nav
         left: 0
 
-    &__checkbox
-        width: 12px
-        height: 12px
-        border: 1px solid #EBEBEB
+    &__checkbox_position
+        display: flex
+
+    &__checkbox_visible:checked
+        background-color: #ccc
+
+    &__checkbox_visible
+        display: inline-block !important
+        filter: grayscale(100%)
         margin-right: 9px
-
-        &_position
-           display: flex
-
-        &_visible:checked ~ div
-            background-color: #ccc
+        appearance: none
+        width: 16px
+        height: 16px
+        border: 1px solid #EBEBEB
 
     &__img
         margin-left: 10px
+
+    
 
 .pagination
     display: flex
